<resources>
    <string name="app_name">Pincode Finder</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_display_message">Result</string>
    <string name="hello_world">Hello world!</string>
    <string name="text1">Pincode/Officename</string>
    <string name="state">State</string>
    <string name="districts">District</string>
    <string name="officename">Office Name</string>
    <string name="pincode">Pincode</string>
    <string name="status">Status</string>
    <string name="suboffice">Sub Office</string>
    <string name="headoffice">Head Office</string>
    <string name="location">Location</string>
    <string name="telephone">Telephone</string>
    <string name="NA">N/A</string>
    <string name="map_nav">Show on Map</string>
    <string name="share">Show on Map</string>
    <string name="noMatchingTxt">No matching records found</string>
    <string name="admob_id">ca-app-pub-1841174173430884/1569279852</string>
    <string name="send_to">Share Via</string>
    <string-array name="states_array">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Lakshadweep</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="default_array">
        <item>Select</item>
    </string-array>
    <string-array name="district_puducherry">
        <item>Karaikal</item>
        <item>Mahe</item>
        <item>Pondicherry</item>
        <item>Yanam</item>
    </string-array>
    <string-array name="district_tn">
        <item>Ariyalur</item>
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Cuddalore</item>
        <item>Dharmapuri</item>
        <item>Dindigul</item>
        <item>Erode</item>
        <item>Kanchipuram</item>
        <item>Kanyakumari</item>
        <item>Karur</item>
        <item>Krishnagiri</item>
        <item>Madurai</item>
        <item>Nagapattinam </item>
        <item>Namakkal</item>
        <item>Nilgiris</item>
        <item>Perambalur</item>
        <item>Pudukkottai</item>
        <item>Ramanathapuram</item>
        <item>Salem</item>
        <item>Sivaganga</item>
        <item>Thanjavur</item>
        <item>Theni</item>
        <item>Tiruchirappalli</item>
        <item>Tirunelveli</item>
        <item>Tiruppur</item>
        <item>Tiruvallur</item>
        <item>Tiruvannamalai</item>
        <item>Tiruvarur</item>
        <item>Tuticorin</item>
        <item>Vellore</item>
        <item>Villupuram</item>
        <item>Virudhunagar</item>
    </string-array>
    <string-array name="district_kl">
        <item>Alappuzha</item>
        <item>Ernakulam</item>
        <item>Idukki</item>
        <item>Kannur</item>
        <item>Kasaragod</item>
        <item>Kollam</item>
        <item>Kottayam</item>
        <item>Kozhikode</item>
        <item>Malappuram</item>
        <item>Palakkad</item>
        <item>Pathanamthitta</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Wayanad</item>
    </string-array>
    <string-array name="district_an">
        <item>Nicobar</item>
        <item>North And Middle Andaman</item>
        <item>South Andaman</item>
    </string-array>
    <string-array name="district_ar">
        <item>Changlang</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Dibang Valley</item>
        <item>Kurung Kumey</item>
        <item>Lohit</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Subansiri</item>
        <item>Papum Pare</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="district_ch">
        <item>Chandigarh</item>
    </string-array>
    <string-array name="district_dn">
        <item>Dadra &amp; Nagar Haveli</item>
    </string-array>
    <string-array name="district_dd">
        <item>Daman</item>
        <item>Diu</item>
    </string-array>
    <string-array name="district_dl">
        <item>Central Delhi</item>
        <item>East Delhi</item>
        <item>New Delhi</item>
        <item>North Delhi</item>
        <item>North East Delhi</item>
        <item>North West Delhi</item>
        <item>South Delhi</item>
        <item>South West Delhi</item>
        <item>West Delhi</item>
    </string-array>
    <string-array name="district_go">
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="district_la">
        <item>Lakshadweep</item>
    </string-array>
    <string-array name="district_ma">
        <item>Bishnupur</item>
        <item>Chandel</item>
        <item>Churachandpur</item>
        <item>Imphal East</item>
        <item>Imphal West</item>
        <item>Senapati</item>
        <item>Tamenglong</item>
        <item>Thoubal</item>
        <item>Ukhrul</item>
    </string-array>
    <string-array name="district_me">
        <item>East Garo Hills</item>
        <item>East Khasi Hills</item>
        <item>Jaintia Hills</item>
        <item>Ri Bhoi</item>
        <item>Imphal East</item>
        <item>Imphal West</item>
        <item>South Garo Hills</item>
        <item>West Garo Hills</item>
        <item>West Khasi Hills</item>
    </string-array>
    <string-array name="district_mi">
        <item>Aizawl</item>
        <item>Champhai</item>
        <item>Kolasib</item>
        <item>Lawngtlai</item>
        <item>Lunglei</item>
        <item>Mammit</item>
        <item>Saiha</item>
        <item>Serchhip</item>
    </string-array>
    <string-array name="district_na">
        <item>Dimapur</item>
        <item>Kiphire</item>
        <item>Kohima</item>
        <item>Longleng</item>
        <item>Mokokchung</item>
        <item>Mon</item>
        <item>Peren</item>
        <item>Phek</item>
        <item>Tuensang</item>
        <item>Wokha</item>
        <item>Zunhebotto</item>
    </string-array>
    <string-array name="district_si">
        <item>East Sikkim</item>
        <item>North Sikkim</item>
        <item>South Sikkim</item>
        <item>West Sikkim</item>
    </string-array>
    <string-array name="district_tr">
        <item>Dhalai</item>
        <item>North Tripura</item>
        <item>South Tripura</item>
        <item>West Tripura</item>
    </string-array>
    <string-array name="district_ka">
        <item>Bagalkot</item>
        <item>Bangalore</item>
        <item>Bangalore Rural</item>
        <item>Belgaum</item>
        <item>Bellary</item>
        <item>Bidar</item>
        <item>Bijapur(KAR)</item>
        <item>Chamrajnagar</item>
        <item>Chickmagalur</item>
        <item>Chikkaballapur</item>
        <item>Chitradurga</item>
        <item>Dakshina Kannada</item>
        <item>Davangere</item>
        <item>Gadag</item>
        <item>Gulbarga</item>
        <item>Hassan</item>
        <item>Haveri</item>
        <item>Kodagu</item>
        <item>Kolar</item>
        <item>Koppal</item>
        <item>Mandya</item>
        <item>Mysore</item>
        <item>Raichur</item>
        <item>Ramanagar</item>
        <item>Shimoga</item>
        <item>Tumkur</item>
        <item>Udupi</item>
        <item>UttaraKannada</item>
        <item>Yadgir</item>
    </string-array>
    <string-array name="district_ap">
        <item>Adilabad</item>
        <item>Ananthapur</item>
        <item>Chittoor</item>
        <item>Cuddapah</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Hyderabad</item>
        <item>K.V.Rangareddy</item>
        <item>Karim Nagar</item>
        <item>Khammam</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Mahabub Nagar</item>
        <item>Medak</item>
        <item>Nalgonda</item>
        <item>Nellore</item>
        <item>Nizamabad</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>Warangal</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="district_mh">
        <item>Ahmednagar</item>
        <item>Akola</item>
        <item>Amravati</item>
        <item>Aurangabad</item>
        <item>Beed</item>
        <item>Bhandara</item>
        <item>Buldhana</item>
        <item>Chandrapur</item>
        <item>Dhule</item>
        <item>Gadchiroli</item>
        <item>Gondia</item>
        <item>Hingoli</item>
        <item>Jalgaon</item>
        <item>Jalna</item>
        <item>Kolhapur</item>
        <item>Latur</item>
        <item>Mumbai</item>
        <item>Nagpur</item>
        <item>Nanded</item>
        <item>Nandurbar</item>
        <item>Nashik</item>
        <item>Osmanabad</item>
        <item>Parbhani</item>
        <item>Pune</item>
        <item>Raigarh(MH)</item>
        <item>Ratnagiri</item>
        <item>Sangli</item>
        <item>Satara</item>
        <item>Sindhudurg</item>
        <item>Solapur</item>
        <item>Thane</item>
        <item>Wardha</item>
        <item>Washim</item>
        <item>Yavatmal</item>
    </string-array>
    <string-array name="district_jk">
        <item>Ananthnag</item>
        <item>Bandipur</item>
        <item>Baramulla</item>
        <item>Budgam</item>
        <item>Doda</item>
        <item>Jammu</item>
        <item>Kargil</item>
        <item>Kathua</item>
        <item>Kulgam</item>
        <item>Kupwara</item>
        <item>Leh</item>
        <item>Poonch</item>
        <item>Pulwama</item>
        <item>Rajauri</item>
        <item>Reasi</item>
        <item>Shopian</item>
        <item>Srinagar</item>
        <item>Udhampur</item>
    </string-array>
    <string-array name="district_wb">
        <item>Bankura</item>
        <item>Bardhaman</item>
        <item>Birbhum</item>
        <item>CoochBehar</item>
        <item>Darjiling</item>
        <item>East Midnapore</item>
        <item>Hooghly</item>
        <item>Howrah</item>
        <item>Jalpaiguri</item>
        <item>Kolkata</item>
        <item>Malda</item>
        <item>Medinipur</item>
        <item>Murshidabad</item>
        <item>Nadia</item>
        <item>North 24 Parganas</item>
        <item>North Dinajpur</item>
        <item>Puruliya</item>
        <item>South 24 Parganas</item>
        <item>South Dinajpur</item>
        <item>West Midnapore</item>
    </string-array>
</resources>