<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     android:gravity="center"
    android:background="#E5E4E2"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/states"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:layout_marginTop="25dp" />
    
     <AutoCompleteTextView
        android:id="@+id/districts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/districts"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/text1"
        android:inputType="text" />

    <Button
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/button_search" />

</LinearLayout>