<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="25dp" >

    <LinearLayout
        android:id="@+id/officeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/officename"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/officeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pincodeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/officeRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/pincode"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pincode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pincodeRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/status"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stauts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subofficeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/suboffice"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subofficeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/NA"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headofficeRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subofficeRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/headoffice"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/headofficeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/locationRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headofficeRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/location"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/NA"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telephoneRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationRow" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/telephone"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telephoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/NA"
            android:textIsSelectable="true" />
    </LinearLayout>

</RelativeLayout>